# geanyastyle

./: AUTHORS  CMakeLists.txt  README  README.md
cmake/: FindAStyle.cmake
src/: AstyleConfig.cpp  AstyleConfig.hpp  CMakeLists.txt  Config.cpp  Config.hpp  GeanyAstyle.cpp  GeanyAstyle.hpp  GeanyPlugin.hpp  geanyastyle.cpp  geanyastyle.hpp
